Update default pgai branch for gha
Signed-off-by: Matthew Peveler <mpeveler@timescale.com>

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -7,7 +7,7 @@ on:
         description: 'Branch of pgai to use'
         required: true
         type: string
-        default: 'jgpruitt/semantic-catalog'
+        default: 'main'
       task:
         description: What task to evaluate
         required: true
