Print out pgai branch in diagnostic info
Signed-off-by: Matthew Peveler <mpeveler@timescale.com>

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -91,6 +91,7 @@ jobs:
 
       - name: Diagnostic information
         run: |
+          echo "branch=${{ inputs.branch }}"
           echo "setup_model=${{ inputs.setup_model }}"
           echo "setup_dimensions=${{ inputs.setup_dimensions }}"
           echo "eval_model=${{ inputs.eval_model }}"
