--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "simplejson>=3.20.1",
     "sql-metadata>=2.17.0",
     "sqlglot>=26.16.4",
+    "tokencost>=0.1.22",
     "vanna[anthropic,openai,pgvector,postgres]>=0.7.9",
 ]
 
